2008-03-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7757: htmlArea RTE: Alternating table rows/columns should start at 1
	* Fixed bug #7770: htmlArea RTE: shift+tab in table body does not move back into thead
	* Fixed bug #7773: htmlArea RTE loads plugins in wrong order
	* Fixed bug #7774: htmlArea RTE: toolbar not updated in IE7 on up/right/down/left arrow
	* Cleaned up dead code related to htmlArea RTE clickenlarge feature

2008-03-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7754: htmlArea RTE: Caption should be first element in table
	* Fixed bug #7755: htmlArea RTE: incorrect handling of enter key in definition lists

2008-03-03  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0beta3

2008-03-03  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #7532: Docheaders: Wizard New Content Element (db_new_content_el.php): No docheader
	* Fixed bug #7527: Docheaders: Wizard New Record/New page (db_new.php): No docheader
	* Fixed bug #7540: Docheaders: Wizard Move Element (move_el.php): No docheader
	* Fixed bug #7562: Docheaders: Module History: No docheader

2008-03-03  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7601: Remove checkbox border from t3skin in Internet Explorer

2008-03-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7729: Login screen needs to be XCLASSable
	* Improvements to Install Tool:
		- Cleanup in t3lib_install
		- Fixed bug #7589: FULLTEXT keys are not processed correctly
		- Fixed bug #6098: Installer should check MySQL charset settings
		- Detect differences in table engine and table character set during DB compare
		- This allows extensions to define the table engine (e.g. MyISAM should be chosen if the table uses FULLTEXT keys). If no table engine is defined, the system default will be used.
		- Add character set support to t3lib_install
		- Convert various blob-fields (which are non-blobs actually) to text variants (exeptions are serialized fields and fields that contain XML data)